real time chat sockets implemented

--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "sass": "^1.72.0",
+    "socket.io-client": "^4.7.5",
     "timeago.js": "^4.0.2",
-    "timeagojs": "^1.0.0"
+    "timeagojs": "^1.0.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
